sandbox/output
fizzbuzz_tests.c: In function 'fizzbuzzTests':
fizzbuzz_tests.c:10:5: error: implicit declaration of function 'answer' [-Werror=implicit-function-declaration]
     assert (strcmp(answer(3), "Fizz") == 0);
     ^
fizzbuzz_tests.c:10:5: error: passing argument 1 of '__builtin_strlen' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:10:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:10:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:10:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:10:5: error: passing argument 1 of '__builtin_strlen' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:10:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:10:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:10:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:10:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:10:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:10:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:10:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:12:5: error: passing argument 1 of '__builtin_strlen' makes pointer from integer without a cast [-Werror]
     assert (strcmp(answer(5), "Buzz") == 0);
     ^
fizzbuzz_tests.c:12:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:12:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:12:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:12:5: error: passing argument 1 of '__builtin_strlen' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:12:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:12:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:12:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:12:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:12:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:12:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:12:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:13:5: error: passing argument 1 of '__builtin_strlen' makes pointer from integer without a cast [-Werror]
     assert (strcmp(answer(15), "FizzBuzz") == 0);
     ^
fizzbuzz_tests.c:13:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:13:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:13:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:13:5: error: passing argument 1 of '__builtin_strlen' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:13:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:13:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:13:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:13:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:13:5: note: expected 'const char *' but argument is of type 'int'
fizzbuzz_tests.c:13:5: error: passing argument 1 of '__builtin_strcmp' makes pointer from integer without a cast [-Werror]
fizzbuzz_tests.c:13:5: note: expected 'const char *' but argument is of type 'int'
cc1: all warnings being treated as errors
make: *** [test] Error 1
